--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -56,13 +56,14 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
@@ -95,13 +96,14 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
@@ -135,7 +137,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-771a">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Сборки Windows Mini</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows7MiniV2byAdderly-2022-08-16-22-23-49.png" alt="" data-image-width="1366" data-image-height="768">
@@ -196,6 +198,32 @@
         <a href="https://drive.google.com/file/d/1Y7TSlAi6BUC8dEQcd18MEw3aI5m_cnIY/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-16" target="_blank">Скачать Windows 11 EDU Mini by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/s4dfz7yqn696391/Windows+11+Mini+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-17" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/cyJXGJYD#BI7SSDiXdBQ76KOYpszXM7Ok8VvtOUfCt-qEzYQ7b78" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-18" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MEGA.NZ]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-12">Windows 7 Starter Micro by Adderly (13.09.2022)</h6>
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-14" src="images/photo_2022-09-13_13-48-19.jpg" alt="" data-image-width="800" data-image-height="600">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-15" src="images/photo_2022-09-13_13-49-04.jpg" alt="" data-image-width="800" data-image-height="600">
+        <p class="u-text u-text-default u-text-white u-text-13">Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены звуки <br>Удалены компоненты планшетного ПК <br>Удалены обои <br>Удален Welcome Center <br>Удалены программы удалённого управления. <br>Удалён Recovery <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалены темы <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалёна подсистема для UNIX<br>Удалены компоненты Интернета.<br>Удалены игры<br>И ОЧЕНЬ много прочего.<br>
+          <br>Образ весит 0.85 GB, после установки Windows занимает 1 GB.&nbsp;<br>Образ может быть записан на 1 ГБ флешку.
+        </p>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-19" target="_blank">Скачать Windows 7 Starter Micro by Adderly [Google Drive]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-20" target="_blank">Скачать ​Windows 7 Starter Micro  by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/DsMDiKTR#fUzPiQOQdFi_ZaRZxTqelnxadHaJyn5AEJs8A22gcKo" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-21" target="_blank">Скачать ​Windows 7 Starter Micro by Adderly [MEGA.NZ]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-14">Windows XP SP3 Mini by Adderly (12.09.2022)</h6>
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-16" src="images/photo_2022-09-13_13-48-19.jpg" alt="" data-image-width="800" data-image-height="600">
+        <p class="u-text u-text-default u-text-white u-text-15">Образ весит 0.29 GB, после установки Windows занимает 1 GB.&nbsp;<br>Образ может быть записан на самые маленькие флешки.
+        </p>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-22" target="_blank">Скачать Windows XP Mini SP3 by Adderly [Google Drive]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-23" target="_blank">Скачать ​​Windows XP Mini SP3  by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/21t1hC7K#mdHZ3jNsFWqmKbz4pcyVU6rHWZq5xJ--vAvhUiXwC70" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-24" target="_blank">Скачать ​​Windows XP Mini SP3 by Adderly [MEGA.NZ]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-16">Windows 8.1 Embedded Industry Pro Micro by Adderly (15.09.2022)</h6>
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-17" src="images/Windows8.x-2022-09-15-00-30-26.png" alt="" data-image-width="1024" data-image-height="768">
+        <p class="u-text u-text-default u-text-white u-text-17">Образ весит 1 GB, после установки Windows занимает около 5 GB.&nbsp;<br>Образ может быть записан на 1 GB флешку.<br>Так же есть 8.0, образ весит 1024 МБ, но не может быть записан на 1 GB флешку.<br>Оба образа 32 битные.
+        </p>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-25" target="_blank">Скачать Windows 8.1 EIPro Micro by Adderly [Google Drive]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-26" target="_blank">Скачать ​​​Windows 8.1 EIPro Micro  by Adderly [MediaFire]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-27" target="_blank">Скачать ​​​Windows 8.1 EIPro Micro by Adderly [MEGA.NZ]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-28" target="_blank">Скачать Windows 8.0 Micro by Adderly [Google Drive]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-29" target="_blank">Скачать ​​​​Windows 8.0 Micro  by Adderly [MediaFire]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-30" target="_blank">Скачать ​​​​Windows 8.0 Micro by Adderly [MEGA.NZ]</a>
       </div>
     </section>
     
