--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -63,13 +63,14 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
@@ -102,13 +103,14 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
@@ -160,7 +162,7 @@
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-10">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-11">Новости</a>
         <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-12">Ключи от Аддерли</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-13">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-13">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-14">Windows Lite сборки</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-15" target="_blank">Предложить идею&nbsp;</a>
         <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-16" target="_blank">Обновления Windows</a>
@@ -176,7 +178,7 @@
         <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-2">Последний ролик</h3>
         <div class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/rFmRRrfw1xA?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/oGlHuUc8TAQ?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
@@ -197,7 +199,7 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-7">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-8">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-9">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-11">Windows Lite сборки</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-12" target="_blank">Предложить идею / Оставить отзыв</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
@@ -210,7 +212,7 @@
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
-        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
         <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
         <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-25" target="_blank">Обновления для Windows</a>
       </div>
@@ -231,7 +233,7 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-7">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-8">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-9">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-11">Windows Lite сборки</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-12" target="_blank">Предложить идею / Оставить отзыв</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
@@ -244,7 +246,7 @@
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
-        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
         <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
         <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-25" target="_blank">Обновления Windows</a>
       </div>
@@ -265,7 +267,7 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-7">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-8">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-9">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-11">Windows Lite сборки</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-12" target="_blank">Предложить идею</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
@@ -306,7 +308,7 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-7">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-8">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-9">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-10">Windows Lite x32 сборки</a>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-11">Windows Lite сборки</a>
         <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-12" target="_blank">Предложить идею</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
@@ -327,7 +329,7 @@
         </div>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-45 u-btn-22">Windows PE</a>
         <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-47 u-btn-23">Ключи от Аддерли</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
         <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-25" target="_blank">Обновления Windows</a>
       </div>
     </section>
@@ -337,11 +339,10 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-32-md u-size-32-sm u-size-32-xs u-size-36-lg u-size-36-xl u-layout-cell-1">
-                <div class="u-container-layout u-valign-bottom-xs u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-container-layout-1">
+                <div class="u-container-layout u-valign-bottom-xs u-container-layout-1">
                   <h2 class="u-text u-text-default u-text-1">Мои социальные сети.</h2>
                   <p class="u-text u-text-2">Можешь подписаться на несколько моих каналов YouTube и Telegram.<br>А так же, глянуть другие платформы.
                   </p>
-                  <a href="https://finework.tk/" class="u-btn u-button-style u-white u-btn-1" target="_blank">FineWork</a>
                 </div>
               </div>
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-24-lg u-size-24-xl u-size-28-md u-size-28-sm u-size-28-xs u-layout-cell-2">
